# tunefire

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflow/: release.yml
hubdj/: build.rs
hubdj/hubdj-client/: Cargo.toml
hubdj/hubdj-client/src/: client.rs  main.rs  theme.rs  ui.rs  util.rs
hubdj/hubdj-client/src/controllers/: client.rs  query.rs
hubdj/hubdj-client/src/state/: mod.rs
hubdj/hubdj-core/: Cargo.toml
hubdj/hubdj-core/src/: lib.rs
hubdj/hubdj-server/: Cargo.toml
hubdj/hubdj-server/src/: main.rs  probe.rs
hubdj/proto/: hubdj.proto
plugins/tf-plugin-local/: Cargo.toml
plugins/tf-plugin-local/src/: lib.rs
plugins/tf-plugin-soundcloud/: Cargo.toml
plugins/tf-plugin-soundcloud/src/: api.rs  import.rs  lib.rs  search.rs
plugins/tf-plugin-soundcloud/src/client/: api.rs  mod.rs
plugins/tf-plugin-soundcloud/src/source/: mod.rs  plugin.rs
plugins/tf-plugin-youtube/: Cargo.toml
plugins/tf-plugin-youtube/src/: import.rs  lib.rs  source.rs
tf-db/: Cargo.toml
tf-db/src/: cleanup.sql  data.rs  filter.rs  lib.rs  mockup.sql  schema.sql  song.rs  tags.rs
tf-db/src/filter/: mod.rs  parser.rs
tf-desktop/: Cargo.toml
tf-desktop/src/: command.rs  delegate.rs  main.rs  media_controls.rs  state.rs  theme.rs  util.rs
tf-desktop/src/controller/: import.rs  mod.rs  playback.rs  plugin.rs  search.rs  tag_searcher.rs
tf-desktop/src/data/: ctx.rs  mod.rs
tf-desktop/src/plugins/: mod.rs
tf-desktop/src/plugins/soundcloud/: api.rs  mod.rs
tf-desktop/src/state/: mod.rs  playlist.rs  track.rs  track_edit.rs  track_new.rs
tf-desktop/src/ui/: add_song.rs  add_track.rs  media_bar.rs  mod.rs  queue.rs  track_edit.rs  track_import.rs  track_list.rs
tf-desktop/src/widget/: controllers.rs  mod.rs  overlay.rs  player_bar.rs  player_tick.rs  search_bar.rs  square.rs  tag_edit.rs  tag_text_box.rs
tf-desktop/src/widget/common/: dropdown.rs  dynamic_image.rs  focusable.rs  hidden_if.rs  knob.rs  mod.rs  parse_lazy.rs  smart_list.rs  stack.rs
tf-desktop/src/widget/controllers/: clicks.rs  focus.rs  hot.rs  item_delete.rs  keys.rs  mod.rs  on_debounce.rs
tf-gui/: Cargo.toml
tf-gui/src/: lib.rs  theme.rs
tf-gui/src/data/: ctx.rs  enumerate.rs  mod.rs
tf-gui/src/widget/: mod.rs
tf-gui/src/widget/common/: dynamic_image.rs  focusable_button.rs  knob.rs  mod.rs  separator.rs  stack.rs
tf-gui/src/widget/controllers/: mod.rs  on_change.rs
tf-player/: Cargo.toml
tf-player/src/: lib.rs  plugin.rs
tf-player/src/player/: controller.rs  mod.rs  resampler.rs  sink.rs  state.rs
tf-player/src/plugins/: local.rs  mod.rs
tf-player/src/plugins/soundcloud/: api.rs  mod.rs  source.rs
tf-player/src/plugins/youtube/: mod.rs
tf-player/src/util/: fetcher.rs  http_progressive.rs  mod.rs  symphonia.rs
tf-player/src/util/hls/: fetcher.rs  mod.rs  source.rs
tf-player/src/util/http_progressive/: cache.rs  fetcher.rs  mod.rs
tf-plugin/: Cargo.toml
tf-plugin/src/: lib.rs
