[workspace]
resolver = "2"
members = [
	"tf-db",
	"tf-player",
	"tf-desktop",
	"tf-plugin",
	"tf-gui",
	"plugins/tf-plugin-local",
	"plugins/tf-plugin-soundcloud",
	"plugins/tf-plugin-youtube",
	"hubdj/hubdj-core",
	"hubdj/hubdj-server",
	"hubdj/hubdj-client",
]

[workspace.dependencies]
druid = { git = "https://github.com/linebender/druid.git", commit = "af94bdd02798c84f7927e898b1ed28ebcec16b30" }
directories = "4.0.1"
tracing = "0.1.36"
palette = "0.6.1"
crossbeam-channel = "0.5.6"
