[package]
name = "tf-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rusqlite = { version = "0.27.0", features = ["bundled"]}
uuid = { version = "1.0.0", features = ["v4", "serde"] }
nom = "7.1.1"
