[package]
name = "tf-db"
version = "0.1.0"
edition = "2021"
authors = ["Alix Bott <bott.alix@gmail.com>"]
description = "Persistent storage for Tunefire data"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
sled = "0.34"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
nom = "7.1.1"
fuzzy-matcher = "0.3"
