[package]
name = "tf-desktop"
version = "0.1.0"
authors = ["Alix Bott <bott.alix@gmail.com>"]
edition = "2021"

description = "A modular music player"
license = "GPL-3.0"

[dependencies]
tf-db = { path = "../tf-db" }
tf-player = { path = "../tf-player" }
druid = {git = "https://github.com/linebender/druid.git", features = ["im", "raw-win-handle"] }
anyhow = "1.0.57"
parking_lot = "0.12.1"
url = "2.2.2"
uuid = { version = "1.1.1", features = ["v4"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "4.0.1"
souvlaki = "0.5.1"
crossbeam-channel = "0.5.6"
palette = "0.6.1"
ureq = "2.5.0"
regex = "1.6.0"
serde_json = "1.0.86"
percent-encoding = "2.2.0"
serde = "1.0.145"
image = "0.24.4"
