[package]
name = "tf-desktop"
version = "0.1.0"
authors = ["Alix Bott <bott.alix@gmail.com>"]
edition = "2021"

description = "A modular music player"
license = "GPL-3.0"

[features]
default = ["local", "soundcloud", "youtube"]
local = ["tf-plugin-local"]
soundcloud = ["tf-plugin-soundcloud"]
youtube = ["tf-plugin-youtube"]

[dependencies]
tf-db = { path = "../tf-db" }
tf-player = { path = "../tf-player" }
druid = { workspace = true, features = ["im", "raw-win-handle"] }
anyhow = "1.0.57"
parking_lot = "0.12.1"
url = "2.2.2"
uuid = { version = "1.1.1", features = ["v4"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "4.0.1"
souvlaki = "0.5.1"
crossbeam-channel = "0.5.6"
palette = "0.6.1"
rand = "0.8"
itertools = "0.10"

tf-plugin = { path = "../tf-plugin" }
tf-plugin-local = { path = "../plugins/tf-plugin-local", optional = true }
tf-plugin-soundcloud = { path = "../plugins/tf-plugin-soundcloud", optional = true }
tf-plugin-youtube = { path = "../plugins/tf-plugin-youtube", optional = true }
