[package]
name = "tf-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Alix Bott <bott.alix@gmail.com>"]
description = "A modular music player"
license = "MIT"

[features]
default = ["local", "soundcloud", "youtube"]
local = ["tf-plugin-local"]
soundcloud = ["tf-plugin-soundcloud"]
youtube = ["tf-plugin-youtube"]

[dependencies]
tf-db = { path = "../tf-db" }
tf-player = { path = "../tf-player" }
tf-gui = { path = "../tf-gui" }
druid = { workspace = true, features = ["im", "raw-win-handle"] }
anyhow = "1.0.57"
parking_lot = "0.12.1"
url = "2.2.2"
uuid = { version = "1.1.1", features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = { workspace = true }
souvlaki = "0.5.1"
crossbeam-channel = "0.5.6"
palette = { workspace = true }
rand = "0.8"
itertools = "0.10"

tf-plugin = { path = "../tf-plugin" }
tf-plugin-local = { path = "../plugins/tf-plugin-local", optional = true }
tf-plugin-soundcloud = { path = "../plugins/tf-plugin-soundcloud", optional = true }
tf-plugin-youtube = { path = "../plugins/tf-plugin-youtube", optional = true }
