[package]
name = "tf-gui"
version = "0.1.0"
edition = "2021"
authors = ["Alix Bott <bott.alix@gmail.com>"]
description = "Collection of useful gui primitives & logic"
license = "MIT"

[dependencies]
anyhow = "1.0"
druid = { workspace = true, features = ["im", "raw-win-handle"] }
tracing = { workspace = true }
palette = { workspace = true }
