[package]
name = "tf-player"
version = "0.1.0"
authors = ["Alix Bott <bott.alix@gmail.com>"]
edition = "2021"

description = "A modular music player"
license = "GPL-3.0"

[features]
default = ["soundcloud", "youtube"]
soundcloud = []
youtube = ["ytextract", "tokio"]


[dependencies]
anyhow = "1.0.57"
cpal = "0.13.5"
crossbeam-channel = "0.5.4"
rubato = "0.12.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
symphonia = { git = "https://github.com/pdeljanov/Symphonia", features = ["mp3", "isomp4", "aac"] }
ureq = "2.4.0"
url = "2.2.2"
hls_m3u8 = "0.4"
parking_lot = "0.12.1"
thiserror = "1.0"
tracing = "0.1.35"

tokio = { version="1.20.1", optional=true, features = ["rt-multi-thread"] }
ytextract = {version = "0.11", optional = true }
rtrb = "0.2.2"
audio_thread_priority = "0.26.1"
