[package]
name = "hubdj-client"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
druid = { workspace = true, features = ["im", "raw-win-handle"] }
hubdj-core = { path = "../hubdj-core" }
tf-db = { path = "../../tf-db" }
tf-gui = { path = "../../tf-gui" }
directories = { workspace = true }
tracing = { workspace = true }
palette = { workspace = true }

[build-dependencies]
tonic-build = "0.9"
