[package]
name = "hubdj-server"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
url = "2.3"
rand = "0.8"


[build-dependencies]
tonic-build = "0.9"
