[package]
name = "hubdj-server"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1" }
tonic = "0.9"
prost = "0.11"
url = "2.3"
rand = "0.8"
hubdj-core = { path = "../hubdj-core" }
anyhow = "1.0"
parking_lot = "0.12"

tf-plugin = { path = "../../tf-plugin" }
tf-plugin-soundcloud = { path = "../../plugins/tf-plugin-soundcloud" }
tf-plugin-youtube = { path = "../../plugins/tf-plugin-youtube" }

[build-dependencies]
tonic-build = "0.9"
