[package]
name = "tf-plugin-youtube"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
tracing = "0.1.37"
tf-plugin = { path = "../../tf-plugin" }
symphonia = { git = "https://github.com/pdeljanov/Symphonia", features = ["mp3", "isomp4", "aac"] }
url = "2.3.1"
ytextract = { git = "https://github.com/Azorlogh/ytextract" }
tokio = { version="1.20.1", features = ["rt-multi-thread"] }
